--- a/config/cable.yml
+++ b/config/cable.yml
@@ -1,9 +1,9 @@
-development:
-  adapter: async
-
-test:
-  adapter: async
-
-production:
+local: &default
   adapter: redis
-  url: redis://localhost:6379/1
+  url: <%= ENV["REDIS_URL"] %>
+
+development: *default
+
+test: *default
+
+production: *default
